Move checkout API endpoint to /checkout vs /cart
