# back-end/routes/cart.js
@@ -1,4 +1,3 @@
-const bodyParser = require('body-parser');
 const express = require('express');
 
 const db = require('../db/index');
@@ -6,8 +5,6 @@ const requireLogin = require('./middleware');
 
 const router = express.Router();
 
-// https://expressjs.com/en/resources/middleware/body-parser.html
-const jsonParser = bodyParser.json();
 
 router.get('', requireLogin, async (req, res) => {
   try {
@@ -60,37 +57,6 @@ router.delete('/items/:id', requireLogin, async (req, res) => {
     res.status(500).send(
       'Cart update failed. Please ensure you are providing valid data.'
     );
-  }
-});
-
-router.post('/checkout', requireLogin, jsonParser, async (req, res) => {
-  try {
-    // Check address details were provided
-    const { address, postcode } = req.body;
-    if (!(address && postcode)) {
-      return res.status(400).send('Please provide a valid address and postcode in the request body.');
-    }
-
-    // Check cart isn't empty
-    const userId = req.user.id;
-    const cartItems = await db.getCartItems(userId);
-    if (cartItems.length < 1) {
-      return res.status(400).send('Your cart is empty.');
-    }
-
-    // Retrieve or create address
-    let addressId = await db.getAddressId(address, postcode);
-    if (!addressId) {
-      addressId = await db.addAddress(address, postcode);
-    }
-
-    // Create order
-    const orderDetails = await db.checkout(userId, addressId);
-    res.status(201).json(orderDetails);
-
-  } catch(err) {
-    console.log(err);
-    res.status(500).send('Checkout failed. Please ensure you are providing valid data.');
   }
 });
 
